fix for tanslateY on ios

--- a/src/styles/views/booking-widget.less
+++ b/src/styles/views/booking-widget.less
@@ -79,6 +79,7 @@ booking-widget-add-room form-element {
     text-align: center;
 
     transform: translateY(-50%);
+    -webkit-transform:translateY(-50%);
     vertical-align:top;
   }
 
@@ -103,6 +104,7 @@ booking-widget-add-room form-element {
     padding: @baseline/4 0;
 
     transform: translateY(-50%);
+    -webkit-transform:translateY(-50%);
     vertical-align:top;
   }
 
@@ -149,6 +151,7 @@ booking-widget-add-room form-element {
     white-space: nowrap;
 
     transform: translateY(-50%);
+    -webkit-transform:translateY(-50%);
     vertical-align:top;
 
     pointer-events: none;
@@ -274,6 +277,7 @@ booking-widget-search {
       color: #ddd;
       font-size: 21px;
       transform: translateY(-50%);
+      -webkit-transform:translateY(-50%);
       vertical-align:top;
       content: @fa-var-chevron-right;
     }
